Header: removed bottom padding (fixes Header/body background color gap problem)

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .Header {
   background-color: #fff;
-  padding-bottom: 12px;
+/*  padding-bottom: 12px;*/
 /*  position: fixed;*/
 /*  z-index: 50;*/
 }
